# dynaconf_ng

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: main.yml
dynaconf/: __init__.py  base.py
tests/: test_001_simple_variable_lookup.py  test_002_custom_instance_variable_lookup_with_envvars.py  test_003_dot_dunder_lookup.py  test_004_dot_dunder_lookup.py
