[tool.poetry]
name = "dynaconf"
version = "0.1.0"
description = "Settings management for Python"
authors = ["Bruno Rocha"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.8.2"
jedi = "0.17.2"

[tool.poetry.dev-dependencies]
ipython = "^7.25.0"
ipdb = "^0.13.9"
pytest = "^6.2.4"
flake8 = "^3.9.2"
rope = "^0.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
